<resources>
    <string name="app_name">bin_searcher_app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_old_request">Стереть старые запросы</string>
    <string name="search">Поиск</string>
    <string name="input_your_bin">Введите ваш БИН (8цифр):</string>
    <string name="title">Определение информации о карточной платежной системе</string>
    <string name="phone">Телефон:</string>
    <string name="name">Название:</string>
    <string name="minus">-</string>
    <string name="minus2">-</string>
    <string name="system">Система:</string>
    <string name="minus3">-</string>
    <string name="latitude">Широта:</string>
    <string name="longitude">Долгота:</string>
    <string name="named">Название:</string>
    <string name="minus4">-</string>
    <string name="minus5">-</string>
    <string name="minus6">-</string>
    <string name="bank">Банк:</string>
    <string name="url">URL:</string>
    <string name="minus7">-</string>
    <string name="city">Город:</string>
    <string name="minus8">-</string>
    <string name="brand">Брэнд:</string>
    <string name="country">Страна:</string>
    <string name="numeric">numeric</string>
    <string name="minus9">-</string>
    <string name="alfa2">alpha2:</string>
    <string name="minus10">-</string>
    <string name="flag">Флаг:</string>
    <string name="minus11">-</string>
    <string name="currency">Валюта:</string>
    <string name="minus12">-</string>
    <string name="minus13">-</string>
    <string name="number">Номер:</string>
    <string name="length">Длина:</string>
    <string name="minus15">-</string>
    <string name="algorithm_luhn">Алгоритм Луна:</string>
    <string name="minus16">-</string>
    <string name="prepaid2">Предоплачен:</string>
    <string name="minus17">-</string>
    <string name="card_type">Тип карты:</string>
    <string name="minus18">-</string>
    <string name="info_about_card">Информация по карте:</string>
    <string name="back">Назад</string>
</resources>